# ai_nn_controller

./: AGENT.md  LICENSE-COMMERCIAL.md  README.md  docker-compose.srsran.yml  docker-compose.yml  mcp_http_proxy.py  opencode.json
.github/cla/: tcd-cla.md
.github/workflows/: docs.yml  main.yml
control_applications/control_application_v2_example/: Dockerfile  README.md  aic_app.conf  aic_app.py  commands.py  docker-compose.yml  pyproject.toml  requirements.txt
control_applications/srsran_read_measurements/: Dockerfile  aic_app.conf  aic_app.py  commands.py  pyproject.toml  requirements.txt
controller_components/ai_nn_controller/: .gitignore  AicApp.py  AicController.py  README.md  RegisterAicApp.py  __init__.py  aic_setup.py  config.py  messages.py  parse_config.py  pyproject.toml  registry.py  server.py
controller_components/ai_nn_controller/arbitration/: __init__.py  resolver.py
controller_components/ai_nn_controller/compat/: __init__.py
controller_components/ai_nn_controller/decorators/: __init__.py  agent_controlled.py  aic_app.py  command_validator.py
controller_components/ai_nn_controller/enums/: MeasurementsHandler.py  __init__.py
controller_components/ai_nn_controller/helpers/: Validator.py
controller_components/ai_nn_controller/managers/: AicManager.py  __init__.py
controller_components/ai_nn_controller/mcp/: README.md  __init__.py  fastapi_integration.py  server.py  tool_generator.py  tool_registry.py
controller_components/ai_nn_controller/observability/: __init__.py  logging.py
controller_components/ai_nn_controller/plugin_framework/: AicPlugin.py  __init__.py  decorators.py  entrypoints.py  plugin_manager.py  validator.py
controller_components/ai_nn_controller/plugins/: __init__.py  entrypoints.py  metadata.py  registry.py
controller_components/ai_nn_controller/protocol/: __init__.py  envelope.py
controller_components/ai_nn_controller/safety/: __init__.py  policy.py
controller_components/aic_msg_broker/: Dockerfile  Makefile  aic_msg_broker.cc  aic_msg_broker.conf  parse_config.cc  parse_config.h
controller_components/controlled_entity/: ControlledEntity.py  NodeRunner.py  __init__.py  config.py  messages.py  parse_config.py  pyproject.toml
controller_components/controlled_entity/decorators/: __init__.py  node.py
controller_components/node_msg_broker/: Dockerfile  node_msg_broker.conf  node_msg_broker.py
controller_components/register/: Dockerfile  generate_template_app.py  register.conf  register.py
controller_components/register/register_utils/: RegisterInterface.py  __init__.py  messages.py  parse_config.py  setup.py
deploy/compose/: docker-compose.arch.yml
docs/: Makefile  README.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: ai_nn_controller.rst  broker.rst  mcp.rst  plugin_framework.rst  plugins.rst  register.rst  rest_api.rst
docs/contributing/: development.rst  guidelines.rst
docs/examples/: basic_app.rst  conflict_mitigation.rst  dummy_node.rst  multi_node_monitoring.rst  plugin_example.rst  srsran_integration.rst
docs/getting_started/: configuration.rst  installation.rst  quickstart.rst
docs/user_guide/: architecture.rst  commands.rst  developing_apps.rst  developing_nodes.rst  developing_plugins.rst  docker.rst
fastapi_client/: Dockerfile  README.md  __init__.py  cli.py  client.py  examples.py  test_mcp.py
network_nodes/dummy_nodes/amp1_node/: Dockerfile  node.conf  node.py
network_nodes/dummy_nodes/amp2_node/: Dockerfile  node.conf  node.py
network_nodes/dummy_nodes/amp3_node/: Dockerfile  node.conf  node.py
network_nodes/dummy_nodes/roadm1_node/: Dockerfile  node.conf  node.py
network_nodes/dummy_nodes/roadm2_node/: Dockerfile  node.conf  node.py
network_nodes/dummy_nodes/roadm3_with_command/: Dockerfile  node.conf  node.py
network_nodes/srsran_node/: Dockerfile  node.conf  node.py
network_nodes/twilight_nodes/: twilight_client.py
network_nodes/twilight_nodes/amp_ila1_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/amp_ila2_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/amp_ila3_node/: Dockerfile  node.conf  node.py
network_nodes/twilight_nodes/amp_ila4_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/amp_ila5_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/amp_ila6_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/roadm1_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/roadm2_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/roadm3_node/: Dockerfile  node.conf  node.py
network_nodes/twilight_nodes/roadm4_node/: Dockerfile  node.conf
network_nodes/twilight_nodes/terminal_end_node/: Dockerfile  node.conf  node.py
network_nodes/twilight_nodes/terminal_source_node/: Dockerfile  node.conf  node.py
plugins/console_plugin/: Dockerfile  README.md  aic_plugin.py  pyproject.toml
scripts/: create_databus_interface.sh  create_interface.sh  install_docker.sh
signatures/: cla.json
tests/: conftest.py
tests/contracts/: test_protocol_contracts.py  test_safety_arbitration_contracts.py
tests/scenarios/: README.md
